@@ -1,9 +1,5 @@
 Technology Preview 2 :
 - InputInt doesn't honor small_step.
-- Improve shadow smoothness
-    => Configurable smoothness factor
-    => Smoothness depends on distance to hit
-    => Smoothness stays the same when quality changes, but has better resolution
 - Fix the fog impression when cloud layer overlaps with ground range.
 - Remove color gradations (replace with automatic boolean and simple colors).
 - Replace zone ranges with curves (with curve input and curve dialog).
