@@ -13,6 +13,7 @@ Scenery :
   * Added clouds hardness to light.
   * Added sun halo control.
   * New cloud model with 2 noises : one for the global shape and one for edges.
+  * Terrain shadows have been improved and are now configurable.
 
 Rendering :
   * New texture model (perpendicular displacement and thickness).
